--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+html, body{
+   margin: 0;
+   padding: 0;
+   font-family: 'Limelight', cursive;
+   overflow-y: scroll auto;
+   overflow-x: hidden;
+ }
+ 
+ ::-webkit-scrollbar {
+   background: #443d3d;
+ }
+ 
+ ::-webkit-scrollbar-thumb {
+   background: white;
+   border-radius: 15px;
+   overflow-y: scroll auto;
+   overflow-x: hidden;
+   max-height: 30vh;
+ }
+ 
+ ::-webkit-scrollbar {
+   width: 10px;
+   background: #443d3d;
+ }
+ 
+ ::-webkit-scrollbar-thumb {
+   background: white;
+   border-radius: 10px;
+ }
+
+
+h1{
+   margin: 0;
+}
